# loki-media-player

./: .dockerignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_loki_media_player_docker.sh  build_loki_media_player_docker_base.sh  docker-run-loki-media-player.sh  installation_dependencies.sh  loki-media-player-app.dockerfile  loki-media-player-base.dockerfile  loki-media-player.dockerfile
assets/: sensor_data.csv
openapi/: openapi_server.py
src/: AudioPlayer.h  Decoder.cpp  Decoder.h  SyncManager.h  ThreadSafeQueue.h  VideoRenderer.cpp  VideoRenderer.h  gl_common.h  main.cpp
src/core/: Application.cpp  Application.h  MediaPlayer.cpp  MediaPlayer.h  MediaState.h  Utils.cpp  Utils.h
src/media/: AudioFrame.h  AudioPlayer.h  CodecInfo.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  FileVideoSource.cpp  FileVideoSource.h  IVideoSource.h  NetworkStreamVideoSource.cpp  NetworkStreamVideoSource.h  SyncManager.h  ThreadSafeQueue.h  VideoFrame.h  VideoRenderer.cpp  VideoRenderer.h
src/media/interface/: IDecoderSource.h  IVideoSource.h
src/rendering/: RenderContext.cpp  RenderContext.h  ShaderProgram.cpp  ShaderProgram.h  VideoFBO.cpp  VideoFBO.h
src/report/: HttpReportSource.cpp  HttpReportSource.h  MqttReportSource.cpp  MqttReportSource.h
src/report/interface/: IReportSource.h
src/sensors/: CsvSensorSource.cpp  CsvSensorSource.h  SensorData.h
src/sensors/interface/: ISensorSource.h
src/threads/: AudioThread.cpp  AudioThread.h
src/ui/: ControlPanel.cpp  ControlPanel.h  FileSelector.cpp  FileSelector.h  OSDRenderer.cpp  OSDRenderer.h  OSDState.h  UIManager.cpp  UIManager.h
